# tunesleuth

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: __init__.py  test_metadata.py  test_models.py  test_patterns.py
tunesleuth_cli/: __init__.py  __main__.py
tunesleuth_core/: __init__.py  metadata.py  models.py  patterns.py  scanner.py
tunesleuth_gui/: __init__.py  __main__.py  main_window.py  results_view.py  styles.py
tunesleuth_gui/resources/: __init__.py
