[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tunesleuth"
version = "0.1.0"
description = "Your music library's private investigator - analyzes folder structures and filenames, infers conventions, and organizes your music into a clean, logical library."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "TuneSleuth Team" }
]
keywords = ["music", "mp3", "id3", "metadata", "organizer", "library"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "click>=8.1.0",
    "mutagen>=1.47.0",
    "PyQt6>=6.6.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-qt>=4.2.0",
    "ruff>=0.1.0",
]

[project.scripts]
tunesleuth = "tunesleuth_cli.__main__:main"

[project.gui-scripts]
tunesleuth-gui = "tunesleuth_gui.__main__:main"

[project.urls]
Homepage = "https://github.com/bobbyfranklin954/tunesleuth"
Repository = "https://github.com/bobbyfranklin954/tunesleuth"
Issues = "https://github.com/bobbyfranklin954/tunesleuth/issues"

[tool.hatch.build.targets.wheel]
packages = ["tunesleuth_core", "tunesleuth_cli", "tunesleuth_gui"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["tunesleuth_core", "tunesleuth_cli", "tunesleuth_gui"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
